--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+</head>
+<body>
 <body onload="cascadeChannel()" style="overflow-x:auto;">
 <h1 class="pageTitles">ROAS Calculator</h1>
   <br>
@@ -400,3 +408,6 @@
 
 
 
+
+</body>
+</html>
