--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <script src="JS.js"></script>
   <title>JS Bin</title>
 </head>
 <body>
