--- a/HelloAnalytics.html
+++ b/HelloAnalytics.html
@@ -18,7 +18,7 @@
 
 <script>
   // Replace with your view ID.
-  var VIEW_ID = 'UA-82644079-1';
+  var VIEW_ID = '164184519';
 
   // Query the API and print the results to the page.
   function queryReports() {
